# agentx-6qib8r

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security-scan.yml
blitzy/documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/: base.Dockerfile  dev.Dockerfile  prod.Dockerfile
infrastructure/helm/agent-platform/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
infrastructure/scripts/: backup.sh  deploy.sh  init-cluster.sh  monitoring-setup.sh  security-setup.sh
infrastructure/terraform/aws/: cloudfront.tf  eks.tf  elasticache.tf  iam.tf  kms.tf  main.tf  outputs.tf  provider.tf  rds.tf  route53.tf  s3.tf  variables.tf  vpc.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  tsconfig.json
src/backend/agent-generator/: Dockerfile  package.json  tsconfig.json
src/backend/api-gateway/: Dockerfile  package.json  tsconfig.json
src/backend/auth-service/: Dockerfile  package.json  tsconfig.json
src/backend/nlp-engine/: Dockerfile  pyproject.toml  requirements.txt  setup.py
src/backend/nlp-engine/src/: __init__.py  main.py
src/backend/nlp-engine/src/config/: settings.py
src/backend/nlp-engine/src/models/: entity_extractor.py  intent_classifier.py
src/backend/nlp-engine/src/services/: language_processor.py
src/backend/nlp-engine/src/utils/: text_preprocessor.py
src/backend/nlp-engine/tests/: test_entity_extractor.py  test_intent_classifier.py
src/web/: .dockerignore  .env.example  .eslintrc.ts  .prettierrc  Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
(+227 files in other folders)
